--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 title: Hasnain Sadiq
-logo: "https://raw.githubusercontent.com/SadiqH2002/Data-Scientist-Portfolio/main/image_3.jpg"
+logo: "https://raw.githubusercontent.com/SadiqH2002/Data-Scientist-Portfolio/main/Virgil-van-Dijk-lifts-Premier-League-Trophy.png"
 #description: text below image
 theme: jekyll-theme-minimal
